--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "dependencies": {
+    "apollo-server-express": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
     "react-router-dom": "^6.20.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
