--- a/package.json
+++ b/package.json
@@ -15,5 +15,36 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "apollo-datasource": "^3.3.2",
+    "apollo-reporting-protobuf": "^3.4.0",
+    "apollo-server-core": "^3.13.0",
+    "apollo-server-env": "^4.2.1",
+    "apollo-server-errors": "^3.3.1",
+    "apollo-server-express": "^3.13.0",
+    "apollo-server-plugin-base": "^3.7.2",
+    "apollo-server-types": "^3.8.0",
+    "async-retry": "^1.3.3",
+    "commander": "^2.20.3",
+    "cssfilter": "^0.0.10",
+    "fast-json-stable-stringify": "^2.1.0",
+    "function-bind": "^1.1.2",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
+    "hasown": "^2.0.0",
+    "lodash.sortby": "^4.7.0",
+    "loglevel": "^1.8.1",
+    "long": "^4.0.0",
+    "node-abort-controller": "^3.1.1",
+    "node-fetch": "^2.7.0",
+    "retry": "^0.13.1",
+    "semver": "^5.7.2",
+    "sha.js": "^2.4.11",
+    "tslib": "^2.6.2",
+    "uuid": "^9.0.1",
+    "value-or-promise": "^1.0.11",
+    "whatwg-mimetype": "^3.0.0",
+    "xss": "^1.0.14"
   }
 }
