--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^4.0.1",
     "express": "^4.17.2",
     "graphql": "^16.6.0",
+    "vite": "^2.7.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.2"
   },
