--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "jwt-decode": "^3.1.2",
+    "vite": "^2.7.2",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
@@ -25,6 +26,5 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.2"
   }
 }
